Fix Vercel output directory path

--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,5 @@
     }
   ],
   "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "dist"
+  "outputDirectory": "frontend/dist"
 }
