--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,6 @@
     }
   ],
   "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/dist"
+  "outputDirectory": "frontend/dist",
+  "framework": "vite"
 }
